[package]
name = "non_local_means"
version = "0.1.0"
authors = ["technolapin <technolapin@orange.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="*"
num-traits="*"
ndarray = '0.13.0' #0.13.0
rand="0.8.0"
rand_distr="0.4.0"
rayon="*"

[dependencies.ndarray-linalg]
version = '0.12.0' #0.12.0
# non-free backend but cross-platform (suposedly)
features = ['intel-mkl']
